; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_cache_speed.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_cache_speed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_property = type { i32 }
%struct.TYPE_2__ = type { i32 }
%struct.demux_reader_state = type { i32 }

@M_PROPERTY_UNAVAILABLE = common dso_local global i32 0, align 4
@M_PROPERTY_PRINT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"/s\00", align 1
@M_PROPERTY_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.m_property*, i32, i8*)* @mp_property_cache_speed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp_property_cache_speed(i8* %0, %struct.m_property* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.m_property*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_2__*, align 8
  %11 = alloca %struct.demux_reader_state, align 4
  %12 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store %struct.m_property* %1, %struct.m_property** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = bitcast i8* %13 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %14, %struct.TYPE_2__** %10, align 8
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %21, label %19

19:                                               ; preds = %4
  %20 = load i32, i32* @M_PROPERTY_UNAVAILABLE, align 4
  store i32 %20, i32* %5, align 4
  br label %43

21:                                               ; preds = %4
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @demux_get_reader_state(i32 %24, %struct.demux_reader_state* %11)
  %26 = getelementptr inbounds %struct.demux_reader_state, %struct.demux_reader_state* %11, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  store i32 %27, i32* %12, align 4
  %28 = load i32, i32* %8, align 4
  %29 = load i32, i32* @M_PROPERTY_PRINT, align 4
  %30 = icmp eq i32 %28, %29
  br i1 %30, label %31, label %38

31:                                               ; preds = %21
  %32 = load i32, i32* %12, align 4
  %33 = call i32 @format_file_size(i32 %32)
  %34 = call i8* @talloc_strdup_append(i32 %33, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %35 = load i8*, i8** %9, align 8
  %36 = bitcast i8* %35 to i8**
  store i8* %34, i8** %36, align 8
  %37 = load i32, i32* @M_PROPERTY_OK, align 4
  store i32 %37, i32* %5, align 4
  br label %43

38:                                               ; preds = %21
  %39 = load i32, i32* %8, align 4
  %40 = load i8*, i8** %9, align 8
  %41 = load i32, i32* %12, align 4
  %42 = call i32 @m_property_int64_ro(i32 %39, i8* %40, i32 %41)
  store i32 %42, i32* %5, align 4
  br label %43

43:                                               ; preds = %38, %31, %19
  %44 = load i32, i32* %5, align 4
  ret i32 %44
}

declare dso_local i32 @demux_get_reader_state(i32, %struct.demux_reader_state*) #1

declare dso_local i8* @talloc_strdup_append(i32, i8*) #1

declare dso_local i32 @format_file_size(i32) #1

declare dso_local i32 @m_property_int64_ro(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
